htfPricesForTimeframe group by ticker to be correct